// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should change gap 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: grid;
  grid-gap: var(--chakra-space-6);
  grid-template-columns: repeat(5, 1fr);
  width: 600px;
}

<div
    class="emotion-0"
    data-chakra-component="CGrid"
  >
    Grid Me
  </div>
</DocumentFragment>
`;

exports[`should offset columns 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: grid;
  grid-gap: var(--chakra-space-6);
  grid-template-columns: repeat(5, 1fr);
  width: 600px;
}

.emotion-1 {
  grid-column-start: 4;
  grid-column-end: 6;
}

<div
    class="emotion-0"
    data-chakra-component="CGrid"
  >
    <div
      class="emotion-1"
      data-chakra-component="CGridItem"
    >
      I'm in a grid item
    </div>
  </div>
</DocumentFragment>
`;

exports[`should render correctly 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: grid;
}

<div
    class="emotion-0"
    data-chakra-component="CGrid"
  >
    Grid Me
  </div>
</DocumentFragment>
`;

exports[`should span columns 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: grid;
  grid-gap: var(--chakra-space-6);
  grid-template-columns: repeat(5, 1fr);
  width: 600px;
}

.emotion-1 {
  grid-column: span 2/span 2;
}

<div
    class="emotion-0"
    data-chakra-component="CGrid"
  >
    <div
      class="emotion-1"
      data-chakra-component="CGridItem"
    >
      I'm in a grid item
    </div>
  </div>
</DocumentFragment>
`;
